20100722_piki_상단메뉴수정
git-svn-id: svn://www.okjsp.pe.kr/okjsp/trunk/html5@437 1400446e-9ab3-46cc-91c4-886daca6c3f0

--- a/WebContent/css/mf42_layout4_text.css
+++ b/WebContent/css/mf42_layout4_text.css
@@ -21,6 +21,7 @@
 .nav3-grid dt a:hover, .nav3-grid dd a:hover {background-color:rgb(225,225,225); /*background-color:rgb(143,174,215) /*For blue background*/; color:rgb(42,90,138); text-decoration:none;}
 /* left menu CSS 추가_piki */
 .nav3-grid dt.dtcss {display:block; min-height:2.0em /*Non-IE6*/; height:auto !important; height:2.0em /*IE6*/; line-height:2.0em; padding:0px 10px 0px 20px;  border-top: solid 1px rgb(200,200,200); text-decoration:none; color:rgb(70,122,167); font-weight:bold; font-size:120%;}
+.nav3-grid dt.hovering  {display:block; min-height:2.0em /*Non-IE6*/; height:auto !important; height:2.0em /*IE6*/; line-height:2.0em; padding:0px 10px 0px 20px;  border-top: solid 1px rgb(200,200,200); text-decoration:none; color:rgb(0,0,0); font-weight:bold; font-size:120%;}
 
 .nav3-bullet {width:170px; margin:10px 0 0 20px;}
 .nav3-bullet dt a, .nav3-bullet dt a:visited {line-height:2.0em; padding:0 0 0 10px; background:url(../img/bg_bullet_full_1.gif) no-repeat 0px 50%; text-decoration:none; color:rgb(70,122,167); font-weight:bold; font-size:120%;}
@@ -161,3 +162,9 @@ p.caption {clear:both; margin:0.5em 0 2.0em 20px; text-align:left; color:rgb(80,
 
 .main a img {border:solid 1px rgb(150,150,150);}
 .main a:hover img {border:solid 1px rgb(220,220,220);}
+
+/* box-shadow 추가_piki */
+.center-box-shadow {box-shadow: 5px 5px 5px silver;
+			        -webkit-box-shadow: 5px 5px 5px silver;
+			        -moz-box-shadow: 5px 5px 5px silver;
+			        -o-box-shadow: 5px 5px 5px silver;}
