--- a/WebContent/css/mf42_layout4_setup.css
+++ b/WebContent/css/mf42_layout4_setup.css
@@ -83,7 +83,9 @@
 .nav2 {white-space:nowrap /*IE hack*/; float:left; width:954px; background:rgb(225,225,225); color:rgb(100,100,100); font-size:130%;} /*Color navigation bar normal mode*/
 .nav2 ul {list-style-type:none;}
 .nav2 ul li {float:left; z-index:auto !important /*Non-IE6*/; z-index:1000 /*IE6*/; border-right:solid 1px rgb(175,175,175);}
-.nav2 ul li a {float:none !important /*Non-IE6*/; float:left /*IE-6*/; display:block; height:2.1em; line-height:2.1em; padding:0 16px 0 16px; text-decoration:none; font-weight:normal; color: rgb(100,100,100);}
+.nav2 ul li a {float:none !important /*Non-IE6*/; float:left /*IE-6*/; display:block; height:2.1em; line-height:2.1em; padding:0 16px 0 16px; text-decoration:none; font-weight:normal; color: rgb(100,100,100);
+/*Drop-down menu에 transition추가_piki*/
+-o-transition:0.2s;-webkit-transition:0.2s;}
 .nav2 ul li ul {display:none; border:none;}
 
 /*Non-IE6 hovering*/
@@ -91,7 +93,9 @@
 .nav2 ul li:hover a {background-color:rgb(215,215,215); text-decoration:none;} /*Color main cells hovering mode*/
 .nav2 ul li:hover ul {display:block; width:10.0em; position:absolute; z-index:999; top:2.0em; margin-top:0.1em; left:0;}
 .nav2 ul li:hover ul li a {white-space:normal; display:block; width:10.0em; height:auto; line-height:1.3em; margin-left:-1px; padding:4px 16px 4px 16px; border-left:solid 1px rgb(175,175,175); border-bottom: solid 1px rgb(175,175,175); background-color:rgb(240,240,240); font-weight:normal; color:rgb(100,100,100);} /*Color subcells normal mode*/
-.nav2 ul li:hover ul li a:hover {background-color:rgb(215,215,215); text-decoration:none;} /*Color subcells hovering mode*/
+.nav2 ul li:hover ul li a:hover {background-color:rgb(215,215,215); text-decoration:none;border: solid 1px rgb(175,175,175);
+/*Drop-down menu에 transition추가_piki*/
+margin:-6px; opacity:0.8;} /*Color subcells hovering mode*/
 
 /*IE6 hovering*/
 .nav2 table {position:absolute; top:0; left:-1px; border-collapse:collapse;}
