--- a/WebContent/css/mf42_layout4_text.css
+++ b/WebContent/css/mf42_layout4_text.css
@@ -102,9 +102,14 @@ p.caption {clear:both; margin:0.5em 0 2.0em 20px; text-align:left; color:rgb(80,
 .contactform label.left {float:left; width:100px; margin:0 0 0 10px; padding:2px; font-size:110%;}
 .contactform select.combo {width:175px; padding:2px; border:solid 1px rgb(200,200,200); font-family:verdana,arial,sans-serif; font-size:110%;}
 .contactform input.field {width:275px; padding:2px; border:solid 1px rgb(200,200,200); font-family:verdana,arial,sans-serif; font-size:110%;}
+.contactform input[type=radio] {float:left; margin:5px 0 0 0 !important /*Non-IE6*/; margin:2px 0 0 -3px /*IE6*/; border:none;}
 .contactform textarea {width:275px; padding:2px; border:solid 1px rgb(200,200,200); font-family:verdana,arial,sans-serif; font-size:110%;}
 .contactform input.button {float:right; width:9.0em; margin-right:20px; padding:1px !important /*Non-IE6*/; padding:0 /*IE6*/; background:rgb(230,230,230); border:solid 1px rgb(150,150,150); text-align:center; font-family:verdana,arial,sans-serif; color:rgb(150,150,150); font-size:110%;}
 .contactform input.button:hover {cursor: pointer; border:solid 1px rgb(80,80,80); background:rgb(220,220,220); color:rgb(80,80,80);}
+.contactform span.guide {float:left; width:275px; display:block; color:rgb(100,100,100); font-size:100%;}
+.contactform span.item {float:left; color:rgb(90,90,90); font-size:100%; vertical-align:middle; padding-left:1em;}
+.contactform span.item label {margin:0 0 0 3px !important;}
+.contactform span.item.first {padding-left:0;}
 
 .loginform {width:160px; margin:-10px 20px 0 20px;}
 .loginform p {clear:both; margin:0; padding:0;}
@@ -115,7 +120,6 @@ p.caption {clear:both; margin:0.5em 0 2.0em 20px; text-align:left; color:rgb(80,
 .loginform input.checkbox {float:left; margin:5px 0 0 0 !important /*Non-IE6*/; margin:2px 0 0 -3px /*IE6*/; border:none;}
 .loginform input.button {float:left; width:5.0em; margin:10px 0 5px 0; padding:1px; background:rgb(230,230,230); border:solid 1px rgb(150,150,150); text-align:center; font-family:verdana,arial,sans-serif; color:rgb(150,150,150); font-size:110%;}
 .loginform input.button:hover {cursor:pointer; border:solid 1px rgb(80,80,80); background:rgb(220,220,220); color:rgb(80,80,80);}
-.loginform input.field:invalid { background-color: #ffdddd; }
 
 /* MAIN SUBCONTENT */
 .main-subcontent h1 {clear:both; margin:0 0 10px 0; padding:4px 10px 3px 10px; background-color:rgb(190,190,190); font-family:"trebuchet ms",arial,sans-serif; color:rgb(255,255,255); font-weight:bold; font-size:140%;}
@@ -170,3 +174,8 @@ p.caption {clear:both; margin:0.5em 0 2.0em 20px; text-align:left; color:rgb(80,
 			        -webkit-box-shadow: 5px 5px 5px silver;
 			        -moz-box-shadow: 5px 5px 5px silver;
 			        -o-box-shadow: 5px 5px 5px silver;}
+
+/********************/
+/*  COMMON Style     */
+/********************/
+input.field:invalid { background-color: #ffdddd; }
