20100810_piki_디자인 변환 준비
git-svn-id: svn://www.okjsp.pe.kr/okjsp/trunk/html5@589 1400446e-9ab3-46cc-91c4-886daca6c3f0

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -250,20 +250,23 @@ list-style-image: url(/html5/images/redarrow.gif);}
 aside li {
 	color: #696969;
 	padding: 4px 6px 5px 5px;
+	cursor:hand;
+}
+
+aside li.dtcss {
+	color: #696969;
+	padding: 4px 6px 5px 5px;
+	cursor:hand;
+}
+
+aside li.hovering {
+	color: #000000;
+	font-weight:bold;
+	padding: 4px 6px 5px 5px;
 }
 
 aside a {
 	color: #6E7761;
-  text-decoration: none;
-}
-
-aside a.dtcss {
-	color: #6E7761;
-  text-decoration: none;
-}
-
-aside a.hovering {
-	/*color: #6E7761;*/
   text-decoration: none;
 }
 
