20100811_piki_디자인수정
git-svn-id: svn://www.okjsp.pe.kr/okjsp/trunk/html5@597 1400446e-9ab3-46cc-91c4-886daca6c3f0

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -389,8 +389,24 @@ table  {
 	text-overflow: ellipsis;
 }
 
+table td {
+	height: 30px;
+	vertical-align: middle;
+}
+
 .ellipsis {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  text-align: left;
+}
+
+.transition {
+	-o-transition:0.2s;
+	-webkit-transition:0.2s;
+}
+
+.transition:HOVER {
+	margin:-3px; 
+	opacity:0.8;
 }
