--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -410,3 +410,36 @@ table td {
 	margin:-3px; 
 	opacity:0.8;
 }
+
+/* 메인 화면 외에 컨텐츠 들어가는 부분 */
+#contentinner {
+	margin-top: 0px;
+	margin-right: 0px;
+	margin-bottom: 0px;
+	margin-left: 199px;
+	padding: 15px 15px 1px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border: 1px solid #AEB0AD;
+	height: 1%;
+	background-color: #FFF;
+}
+
+#contentinner section {
+	width: 99%;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border: 1px solid #AEB0AD;
+	padding: 5px;
+	background-color: #F2F2F2;
+}
+
+#contentinner  h4 {
+	font-size: 20px;
+}
+
+#contentinner  h3 {
+	font-size: 15px;
+}
