20100812_piki_디자인 변환
git-svn-id: svn://www.okjsp.pe.kr/okjsp/trunk/html5@604 1400446e-9ab3-46cc-91c4-886daca6c3f0

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -437,9 +437,13 @@ table td {
 }
 
 #contentinner  h4 {
-	font-size: 20px;
+	font-size: 17px;
 }
 
 #contentinner  h3 {
-	font-size: 15px;
+	font-size: 12px;
+}
+
+#contentinner  p {
+	font-size: 11px;
 }
