--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -470,3 +470,33 @@ table tr {
    -webkit-animation-timing-function: ease-in-out;
    -webkit-animation-direction: alternate;
 }
+
+#textarea_member {
+	width: 100%;
+	height: 200px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border: 1px solid #AEB0AD;
+}
+
+/* 버튼_width와 위치값이 없는 버튼 */
+input.button_two  {
+	margin: 10px 0 5px 5px;
+	padding: 1px;
+	border: solid 1px rgb(150, 150, 150);
+	border-radius: 3px;
+    -moz-border-radius: 3px;
+    background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#ddd));
+    background: -moz-linear-gradient(top, #fff, #ddd);
+	text-align: center;
+	font-family: verdana, arial, sans-serif;
+	color: rgb(150, 150, 150);
+	font-size: 110%;
+}
+/* 버튼_width와 위치값이 없는 버튼 */
+input.button_two:hover {
+	cursor: pointer;
+	border: solid 1px rgb(80, 80, 80);
+	background: rgb(220, 220, 220);
+	color: rgb(80, 80, 80);
+}
