20100816_piki_메인 개발
git-svn-id: svn://www.okjsp.pe.kr/okjsp/trunk/html5@659 1400446e-9ab3-46cc-91c4-886daca6c3f0

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -20,6 +20,7 @@ body {
 a {
 	color: #333;
 	outline: none;
+	text-decoration: none;
 }
 
 a:hover {
@@ -337,7 +338,7 @@ footer {
 	/* 좌측 메뉴 관련 */
 aside li.dtcss {
 	color: #696969;
-	padding: 4px 6px 5px 5px;
+	padding: 2px 6px 2px 5px;
 }
 
 /* 좌측 메뉴 관련 */
