--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -537,11 +537,20 @@ input.button_two:hover {
 
 header .search {
 	position: absolute;
-	top: 95px;
+	top: 75px;
 	width: 250px;
 	left: 710px;
-	height: 30px;
+	height: 50px;
 	font: 14px/ 1 Tahoma, Arial;
 	text-transform: uppercase;
 	overflow: hidden;
+}
+
+select.field {
+	margin: 0 0 5px 0;
+	padding: 0.1em 0 0.2em 0 !important /*Non-IE6*/;
+	padding: 0.2em 0 0.3em 0 /*IE6*/;
+	border: solid 1px rgb(200, 200, 200);
+	font-family: verdana, arial, sans-serif;
+	font-size: 110%;
 }
