Issues 2 해결 : 글 작성시 Validation 추가. ( 추가로 Web Notification 기능 추가. )
git-svn-id: svn://www.okjsp.pe.kr/okjsp/trunk/html5@858 1400446e-9ab3-46cc-91c4-886daca6c3f0

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -414,6 +414,10 @@ input.field {
 	font-size: 110%;
 }
 
+input.field:invalid {
+    background-color: #ffdddd;
+}
+
 table  {
 	width:100%;
 	/*border: 1px solid #666;*/
