20100914_piki_HTML5 Validator 통과(진행중) http://code.google.com/p/okjsp/issues/detail?id=4
git-svn-id: svn://www.okjsp.pe.kr/okjsp/trunk/html5@883 1400446e-9ab3-46cc-91c4-886daca6c3f0

--- a/WebContent/chat/res/css/jwebsocket.css
+++ b/WebContent/chat/res/css/jwebsocket.css
@@ -437,3 +437,13 @@ a.emphasized:active {
 a.emphasized:focus {
 	background-color: #f0f0f0;
 }
+
+table.stlbDlgBorder {
+	font-family: Verdana, Helvetica, sans-serif;
+	font-weight: normal;
+	font-size: 10pt;
+	/* we could use inherited here but IE doesn't get this */
+	background-color: #f0f0f0;
+	border: 0px;
+	width: 100%;
+}
