20100915_piki_메인에서 시간 refresh될시 bold 안되는거 수정
git-svn-id: svn://www.okjsp.pe.kr/okjsp/trunk/html5@899 1400446e-9ab3-46cc-91c4-886daca6c3f0

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -507,6 +507,7 @@ table tr {
    -webkit-animation-iteration-count: 1;
    -webkit-animation-timing-function: ease-in-out;
    -webkit-animation-direction: alternate;
+   font-weight: bolder;
 }
 
 #textarea_member {
@@ -578,4 +579,12 @@ select.field {
 	margin-top: -7px;
 	margin-bottom: 10px;
 	text-align: center;
+}
+
+#note {
+	width: 100%;
+	height: 80px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border: 1px solid #AEB0AD;
 }
