--- a/WebContent/samples/jQMppt/css/jqm-docs.css
+++ b/WebContent/samples/jQMppt/css/jqm-docs.css
@@ -1,5 +1,8 @@
-.ui-mobile #jqm-home {  background: #e5e5e5 ; }
-.ui-mobile #jqm-homeheader { padding: 55px 25px 0; text-align: center }
+.ui-mobile #jqm-home {  background: #e6e6fa ; }
+.ui-mobile #jqm-homeheader { padding: 5px 5px 0; text-align: center }
 .ui-mobile #jqm-homeheader h1 { margin: 0 0 10px; }
 .ui-mobile #jqm-homeheader p { margin: 0; }
-.ui-mobile .jqm-themeswitcher { clear: both; margin: 20px 0 -15px; }
+/*.ui-mobile .jqm-themeswitcher { clear: both; margin: 20px 0 -15px; }*/
+
+.ui-mobile #font-one { font-size: 40px }
+.ui-mobile #font-two { font-size: 30px }
